# fictional-octo-engine

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  env.dist  pyproject.toml  requirements.txt  wsgi.py
app/: constants.py  core.py  extensions.py  helpers.py
app/db/: cli.py  models.py
app/home/: views.py
app/redis/: views.py
credentials/: client_secret_example.json
tests/: conftest.py  test_factory.py  test_redis.py
