[tool.poetry]
name = "fictional-octo-engine"
version = "0.4.0"
description = "A simple Flask Hello World application"
authors = ["Leandro E. Colombo Viña <lecovi@ac.python.org.ar>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
python-dotenv = "^0.13.0"
flask-redis = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
